couleur et style

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
     <link rel="stylesheet" href="css/main.css"/>
+    <link href="https://fonts.googleapis.com/css?family=Lato:400,900,400italic,700italic" rel="stylesheet">
     <title>Portfolio</title>
 </head>
 <body>
@@ -45,14 +46,15 @@
 
         <div class="col-12 render-console">
             <p>
-                valentinleymonie@DESKTOP-27ATGFH MINGW64 /C/VALENTIN/Portfolio (dev) :<br/>
+                    <span class="green">valentinleymonie@DESKTOP-27ATGFH</span> <span class="purple">MINGW64</span> <span class="yellow">/C/VALENTIN/Portfolio</span> <span class="blue">(dev)</span> :<br/>
                     <br/>
                 <div class="render-terminal">
-                    lol
+                    
                 </div>
 
             </p>
         </div>
+
     </div>
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
     <script type="text/javascript" src="js/script.js"></script>
