--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         </div>
 
         <div class="col-12 input-console">
-            console.log{ <input id="inputText" class="inpt" type="text"/> };<input class="btn" onclick="consoleLog()" type="button" value="RUN >"/>
+            <span class="greenConsole">console</span>.<span class="yellowLog">log</span>( <input id="inputText" class="inpt" type="text"/> );<input class="btn" onclick="consoleLog()" type="button" value="RUN >"/>
         </div>
 
         <div class="col-12 render-console">
@@ -58,5 +58,6 @@
     </div>
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
     <script type="text/javascript" src="js/script.js"></script>
+    </script>
 </body>
 </html>
