--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
         <div class="col-12 tuto">
            <h1>Welcome</h1>
            <br/>
-           <h2>Get started</h2>
-           <h3>How to use</h3>
-           <ul>
+           <h2 class="hideIt">Get started</h2>
+           <h3 class="hideIt">How to use</h3>
+           <ul class="hideIt">
                <li>Use the keywords menu to show the differents parts :
                    <ol>
                        <li>Skills</li>
@@ -62,6 +62,12 @@
             </p>
         </div>
 
+
+        <div class="project1"><button class='close' onclick="closeProject()">Close</button><br/>
+            <img class="project-img" src="img/bot1.png"></img><br/>
+            <img class="project-img" src="img/bot2.png"></img><br/>
+            <img class="project-img" src="img/bot3.png"></img><br/>
+        </div>
     </div>
     <script defer src="https://use.fontawesome.com/releases/v5.0.10/js/all.js" integrity="sha384-slN8GvtUJGnv6ca26v8EzVaR9DC58QEwsIk9q1QXdCU8Yu8ck/tL/5szYlBbqmS+" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
