--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <head>
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <meta name="description" content="Portfolio website of Valentin Leymonie" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
     <link rel="stylesheet" href="css/main.css"/>
     <link href="https://fonts.googleapis.com/css?family=Lato:400,900,400italic,700italic" rel="stylesheet"/>
-    <title>Portfolio</title>
+    <title>Portfolio Valentin Leymonie</title>
 </head>
 <body>
     <header id="headerResp" class="col-3 header-parent float">
@@ -64,9 +65,9 @@
 
 
         <div class="project1"><button class='close' onclick="closeProject()">Close</button><br/>
-            <img class="project-img" src="img/bot1.png"></img><br/>
-            <img class="project-img" src="img/bot2.png"></img><br/>
-            <img class="project-img" src="img/bot3.png"></img><br/>
+            <img class="project-img" src="img/bot1.png" alt="image chatbot projet hackhaton"></img><br/>
+            <img class="project-img" src="img/bot2.png" alt="image accueil chatbot projet hackhaton"></img><br/>
+            <img class="project-img" src="img/bot3.png" alt="image menu chatbot projet hackhaton"></img><br/>
         </div>
     </div>
     <script defer src="https://use.fontawesome.com/releases/v5.0.10/js/all.js" integrity="sha384-slN8GvtUJGnv6ca26v8EzVaR9DC58QEwsIk9q1QXdCU8Yu8ck/tL/5szYlBbqmS+" crossorigin="anonymous"></script>
