--- a/index.html
+++ b/index.html
@@ -64,10 +64,10 @@
         </div>
 
 
-        <div class="project1"><button class='close' onclick="closeProject()">Close</button><br/>
-            <img class="project-img" src="img/bot1.png" alt="image chatbot projet hackhaton"></img><br/>
-            <img class="project-img" src="img/bot2.png" alt="image accueil chatbot projet hackhaton"></img><br/>
-            <img class="project-img" src="img/bot3.png" alt="image menu chatbot projet hackhaton"></img><br/>
+        <div class="col-12 project1"><button class='close' onclick="closeProject()">Close</button><br/><br/>
+            <center><img class="project-img" src="img/bot1.png" alt="image chatbot projet hackhaton"></img><br/><br/>
+            <img class="project-img" src="img/bot2.png" alt="image accueil chatbot projet hackhaton"></img><br/><br/>
+            <img class="project-img" src="img/bot3.png" alt="image menu chatbot projet hackhaton"></img><br/><br/><br/></center>
         </div>
     </div>
     <script defer src="https://use.fontawesome.com/releases/v5.0.10/js/all.js" integrity="sha384-slN8GvtUJGnv6ca26v8EzVaR9DC58QEwsIk9q1QXdCU8Yu8ck/tL/5szYlBbqmS+" crossorigin="anonymous"></script>
