--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                        <li>About</li>
                    </ol>
                </li>
-               <li>Type a keywords in the console log input or click one in the menu</li>
+               <li>Type a keyword in the console.log input or use the menu</li>
                <li>Press Enter or click on Run !</li>
                <li>Enjoy your visit !</li>
            </ul>
