--- a/index.html
+++ b/index.html
@@ -16,12 +16,14 @@
                 <li id="about" onclick="getId(this.textContent)" class="menu-li">About</li>
                 <li id="projects" onclick="getId(this.textContent)" class="menu-li">Projects</li>
                 <li id="contact" onclick="getId(this.textContent)" class="menu-li">Contact</li>
+                <li id="CV" class="menu-li"><a class="mailto" style="text-decoration:none" href="CV_Graphique_Valentin_Leymonie.pdf">C.V.</a></li>
             </ul>
             <ul  id="menu-mobile">
                 <li id="skills" onclick="getId('Skills')" class="menu-li"><i class="fas fa-chart-pie"></i></li>
                 <li id="about" onclick="getId('About')" class="menu-li"><i class="fas fa-newspaper"></i></li>
                 <li id="projects" onclick="getId('Projects')" class="menu-li"><i class="fas fa-box-open"></i></li>
                 <li id="contact" onclick="getId('Contact')" class="menu-li"><i class="fas fa-phone"></i></li>
+                <li id="CV" class="menu-li"><a class="mailto" style="text-decoration:none" href="CV_Graphique_Valentin_Leymonie.pdf">C.V.</a></li>
             </ul>
         </nav>
     </header>
